--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Pepper Curry: Design &amp; Illustration
+title: Pepper Curry: Design
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Pepper Curry is a designer and illustrator living and working in Wellington, New Zealand. Find a collection of experiments and works here.
