--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,10 @@
 # Site settings
-title: Pepper Curry: Design
+title: Your awesome title
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Pepper Curry is a designer and illustrator living and working in Wellington, New Zealand. Find a collection of experiments and works here.
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://www.peppercurry.com" # the base hostname & protocol for your site
 twitter_username: sempercapsicum
