--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: "Pepper Curry: Design & Illustration"
+email: sempercapsicum@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Pepper Curry is a web designer and general creative person living in Wellington, New Zealand. This is her website which may be in a weird state of disarray due to experimentation.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://www.peppercurry.com" # the base hostname & protocol for your site
 twitter_username: sempercapsicum
