afaik, shit is responsive as hell now.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "Pepper Curry: Design & Illustration"
+title: "Pepper Curry Is A Designer."
 email: sempercapsicum@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Pepper Curry is a web designer and general creative person living in Wellington, New Zealand. This is her website, which may be in a weird state of disarray due to experimentation.
